<?xml version="1.0"?>
<package format="2">
  <name>minilab_navigation</name>
  <version>0.0.0</version>
  <description>The minilab_navigation package</description>
  <maintainer email="root@todo.todo">root</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- Utilisation de depend comme raccourci -->
  <depend>rospy</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>visualization_msgs</depend>
  <depend>std_msgs</depend>
  <depend>minilab_simulation</depend>

  <export>
  </export>
</package>